index.html updated

--- a/index.html
+++ b/index.html
@@ -144,30 +144,30 @@ th {
 </head>
 <body>
   <div class="header">
-    <h1>Responsive Tables</h1>
+    <h1>Java Odyssey</h1>
   </div>
   <div class="row">
   <div class="col-3 menu">
     <ul>
     <li>Home</li>
-    <li>The City</li>
-    <li>The Island</li>
-    <li>The Food</li>
+    <li><a href="https://tundetubo.github.io/JavaMail/">Java mail</a></li>
+    <li></li>
+    <li></li>
     </ul>
   </div>
   
   <div class="col-6">
-    <h3>Choice of Responsive tables</h3>
+    <h3></h3>
     <table>
      <tr><th></th><th>Id</th><th>Name</th><th>Category</th><th>Format</th><th>Author</th>
     </tr>
      <tr>
-       <td><img src="images/Sister Nike and me at Funmi's wedding - March 2019.JPG"/></td>
+       <td><img src=" "/></td>
        <td>Id</td>
-       <td>Name</td>
-       <td>Category</td>
-       <td>Format</td>
-       <td>Author</td>
+       <td></td>
+       <td></td>
+       <td></td>
+       <td></td>
     </tr>
   
     </table>
@@ -182,7 +182,7 @@ th {
   <p>Privacy policy</p>
   <p>Cookies policy</p>
   <div class="lineHorizontal"></div>
-  <p>Tiberus 2019</p>
+  <p>Tiberus 2023</p>
 </div>
   
 
