--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@ th {
     <ul>
     <li>Home</li>
     <li><a href="https://tundetubo.github.io/JavaMail/">Java mail</a></li>
-    <li></li>
+    <li><a href="https://tundetubo.github.io/Arrays/">Arrays</a></li>
     <li></li>
     </ul>
   </div>
