--- a/index.html
+++ b/index.html
@@ -176,6 +176,7 @@ th {
       
 </div>
 
+
 <div class="footer">
   <p>Terms and conditions</p>
   <p>License agreement</p>
@@ -183,9 +184,15 @@ th {
   <p>Cookies policy</p>
   <div class="lineHorizontal"></div>
   <p>Tiberus 2023</p>
-</div>
-  
+  <div>
 
+    <a style="padding:10px; "><img src="https://i.ibb.co/bPLzh61/circle-facebook.png" alt="Facebook" title="Facebook" style="width:32px; border:0;" ></a>  
+    <a style="padding:10px; "><img src="https://i.ibb.co/sRH7TK2/circle-twitter.png" alt="twitter" style="width:32px; border:0;" ></a>
+    <a style="padding:10px; "><img src="https://i.ibb.co/VQ9nCv3/circle-youtube.png" alt="youtube" style="width:32px; border:0;" ></a>
+    <a style="padding:10px; "><img src="https://i.ibb.co/K5wbWBS/circle-linkedin.png" alt="linkedin" style="width:32px; border:0;" ></a> 
+    <a style="padding:10px; "><img src="https://i.ibb.co/x8G1NMz/circle-instagram.png" alt="instagram" style="width:32px; border:0;" ></a>
+ </div>
+</div>
 
 </body>
 </html>
