--- a/index.html
+++ b/index.html
@@ -167,7 +167,9 @@ th {
 </head>
 <body>
   <div class="header">
-    <h1 style="color: #9900cc;">Java for absolute beginners</h1>
+   <h1 style="color: #9900cc;">Java for absolute beginners</h1>
+   <!-- Line -->
+   <hr style="width:200; background-color: #9900cc;">
    <ul style="list-style-type: none; margin: 0; padding: 0; ">
   <li style="display: inline;"><a href="https://tundetubo.github.io"><img src="home.png" alt="home-page" style="width:40px; height:40px;" /></a></li>
  <li style="display: inline;"><a href="#"><img src="about-us.png" alt="about-us" style="width:40px; height:40px;" /></a></li>
