--- a/index.html
+++ b/index.html
@@ -167,17 +167,11 @@ th {
 </head>
 <body>
   <div class="header">
-<<<<<<< HEAD
+
     <h1 style="color: #9900cc;">Java for absolute beginners</h1>
 
     <!-- line -->
     <hr style="width:200; background-color: blue;">
-
-=======
-   <h1 style="color: #9900cc;">Java for absolute beginners</h1>
-   <!-- Line -->
-   <hr style="width:200; background-color: #9900cc;">
->>>>>>> 75e95c60fc1abc7f709841297ddde90a0dbb5129
    <ul style="list-style-type: none; margin: 0; padding: 0; ">
   <li style="display: inline;"><a href="https://tundetubo.github.io"><img src="home.png" alt="home-page" style="width:40px; height:40px;" /></a></li>
  <li style="display: inline;"><a href="#"><img src="about-us.png" alt="about-us" style="width:40px; height:40px;" /></a></li>
@@ -191,7 +185,7 @@ th {
   <div class="col-3 menu">
     <ul>
     <li>Home</li>
-    <li><a href="https://tundetubo.github.io/JavaForBeginners/">Data</a></li>
+    <li><a href="https://tundetubo.github.io/JavaForBeginners/JavaForBeginners">Data</a></li>
     <li><a href="https://tundetubo.github.io/JavaForBeginners/" color="white">Time</a></li>
     <li><a href="https://tundetubo.github.io/JavaForBeginners/" color="white">Text</a></li>
     </ul>
