--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@ th {
   <div class="col-3 menu">
     <ul>
     <li>Home</li>
-    <li><a href="https://tundetubo.github.io/JavaForBeginners/JavaForBeginners">Data</a></li>
+    <li><a href="https://tundetubo.github.io/JavaForBeginners/">Data</a></li>
     <li><a href="https://tundetubo.github.io/JavaForBeginners/" color="white">Time</a></li>
     <li><a href="https://tundetubo.github.io/JavaForBeginners/" color="white">Text</a></li>
     </ul>
