--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@ th {
   
   <div class="col-6">
     <h3></h3>
-    
+    Java is one of the most popular programming languages. On this site you will learn how to write commands in Java for computers to perform the specified tasks. 
   <a href="#" class="button">Data</a>
   <a href="#" class="button" >Time</a>
   <a href="#" class="button">Text</a>
