--- a/index.html
+++ b/index.html
@@ -193,7 +193,9 @@ th {
   
   <div class="col-6">
     <h3></h3>
+    <div>
     Java is one of the most popular programming languages. On this site you will learn how to write commands in Java for computers to perform the specified tasks. 
+    </div>
   <a href="#" class="button">Data</a>
   <a href="#" class="button" >Time</a>
   <a href="#" class="button">Text</a>
