--- a/index.html
+++ b/index.html
@@ -194,13 +194,15 @@ th {
   <div class="col-6">
     <h3></h3>
     <div>
-    Java is one of the most popular programming languages. On this site you will learn how to write commands in Java for computers to perform the specified tasks. 
+      <p>Java is one of the most popular programming languages. On this site you will learn how to write commands in Java for computers to perform the specified tasks.</p>
     </div>
-  <a href="#" class="button">Data</a>
-  <a href="#" class="button" >Time</a>
-  <a href="#" class="button">Text</a>
-  <a href="#" class="button">Numeric</a>
-  <a href="#" class="button">Boolean</a>
+    <div>
+      <a href="#" class="button">Data</a>
+      <a href="#" class="button" >Time</a>
+      <a href="#" class="button">Text</a>
+      <a href="#" class="button">Numeric</a>
+      <a href="#" class="button">Boolean</a>
+    </div>
  
     
  </div>
