--- a/index.html
+++ b/index.html
@@ -195,6 +195,9 @@ th {
     <h3></h3>
     <div>
       <p>Java is one of the most popular programming languages. On this site you will learn how to write commands in Java for computers to perform the specified tasks.</p>
+      <p>We shall begin with an introduction to data in Java.
+         Date is the information that we include in our programming. To continue with the concept of data in Java to <a href="https://github.com/tundetubo/JavaForBeginners/">Data in Java</a>.
+      </p>
     </div>
     <div>
       <a href="#" class="button">Data</a>
