--- a/index.html
+++ b/index.html
@@ -194,9 +194,9 @@ th {
   <div class="col-6">
     <h3></h3>
     <div>
-      <p>Java is one of the most popular programming languages. On this site you will learn how to write commands in Java for computers to perform the specified tasks.</p>
+      <p>Java is one of the most popular programming languages. On this site you will learn how to write code in Java.</p>
       <p>We shall begin with an introduction to data in Java.
-         Date is the information that we include in our programming. To continue with the concept of data in Java to <a href="https://github.com/tundetubo/JavaForBeginners">Data in Java</a>.
+         Date is the information that we work with. These could be in the form of  characters, text, number digits or more complex forms. To explain in more datail the concept of data in Java  go to <a href="https://tundetubo/JavaForBeginners/">Data in Java</a>.
       </p>
     </div>
     <div>
