--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@ th {
       </p>
     </div>
     <div>
-      <a href="#" class="button">Data</a>
+      <a href="#" class="button">Data types</a>
       <a href="#" class="button" >Time</a>
       <a href="#" class="button">Text</a>
       <a href="#" class="button">Numeric</a>
