--- a/index.html
+++ b/index.html
@@ -184,8 +184,8 @@ th {
   <div class="row">
   <div class="col-3 menu">
     <ul>
-    <li>Home</li>
-    <li><a href="https://tundetubo.github.io/JavaForBeginners/">Data</a></li>
+    <li><a href="https://tundetubo.github.io/">Home</a></li>
+    <li><a href="https://tundetubo.github.io/JavaForBeginners/">Data type</a></li>
     <li><a href="https://tundetubo.github.io/JavaForBeginners/" color="white">Time</a></li>
     <li><a href="https://tundetubo.github.io/JavaForBeginners/" color="white">Text</a></li>
     </ul>
@@ -200,7 +200,7 @@ th {
       </p>
     </div>
     <div>
-      <a href="#" class="button">Data types</a>
+      <a class="button" href="https://tundetubo.github.io/JavaForBeginners/">Data types</a>
       <a href="#" class="button" >Time</a>
       <a href="#" class="button">Text</a>
       <a href="#" class="button">Numeric</a>
